# cryptails

./: Anchor.toml  package-lock.json  package.json
app/: create.js  data.js  index.js  init.js  list.js  mp-list.js  mp-sell-list.js  package-lock.json  package.json
app/src/: Layout.js  WalletWrapper.js  gloablStyles.js  index.js
app/src/components/: Card.js  Create.js  List.js  Main.js  Marketplace.js  SellButton.js
app/src/hooks/: cryptails.js  marketplace.js
app/src/idl/: cryptails.json  marketplace.json
app/src/services/: cryptails.js  helpers.js  marketplace.js  provider.js
programs/cryptails/: Cargo.toml
programs/cryptails/src/: lib.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/transfer/: Cargo.toml
programs/transfer/src/: lib.rs
scripts/: create.js  data.js  list.js  mp-list.js  mp-sell.js  test.js  transfer.js
tests/: cryptails.ts
