[package]
name = "marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {path="../../../anchor/lang"}
anchor-spl = {path="../../../anchor/spl"}
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
cryptails = { path = "../cryptails", features = ["cpi"] }
